force-app/main/default/objects/PlacementLineItem__c/fields/RefPlacement__c.field-meta.xml
<CustomField>
    <fullName>RefPlacement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Placement Line Items</relationshipLabel>
    <relationshipName>PlacementLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>