force-app/main/default/objects/PlacementLineItem__c/fields/Reinsurer__c.field-meta.xml
<CustomField>
    <fullName>Reinsurer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reinsurer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Placement Line Items (Reinsurer)</relationshipLabel>
    <relationshipName>PlacementLineItems_Reinsurer</relationshipName>
    <type>Lookup</type>
</CustomField>