force-app/main/default/objects/PlacementLineItem__c/fields/Security_lk__c.field-meta.xml
<CustomField>
    <fullName>Security_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Security</label>
    <referenceTo>ACC_AdditionalInfo__c</referenceTo>
    <relationshipLabel>Placement Line Items</relationshipLabel>
    <relationshipName>Placement_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>