force-app/main/default/objects/PlacementLineItem__c/fields/SharedwithBU__c.field-meta.xml
<CustomField>
    <fullName>SharedwithBU__c</fullName>
    <label>Shared with(BU)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_BizRegion</valueSetName>
    </valueSet>
</CustomField>