force-app/main/default/objects/PlacementLineItem__c/fields/SignedLinePct__c.field-meta.xml
<CustomField>
    <fullName>SignedLinePct__c</fullName>
    <label>Signed Line(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>