force-app/main/default/objects/PlacementLineItem__c/fields/SignedPct__c.field-meta.xml
<CustomField>
    <fullName>SignedPct__c</fullName>
    <label>Signed(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>