force-app/main/default/objects/PlacementLineItem__c/fields/SignedPremium__c.field-meta.xml
<CustomField>
    <fullName>SignedPremium__c</fullName>
    <label>Signed Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>