force-app/main/default/objects/PlacementLineItem__c/fields/SOAPeriod__c.field-meta.xml
<CustomField>
    <fullName>SOAPeriod__c</fullName>
    <label>SOA Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>