force-app/main/default/objects/PlacementLineItem__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Posting Open</fullName>
            </value>
            <value>
                <fullName>Posting Submit</fullName>
            </value>
            <value>
                <fullName>Posting Approved</fullName>
            </value>
            <value>
                <fullName>Posting Rejected</fullName>
            </value>
            <value>
                <fullName>Posting Closed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>