force-app/main/default/objects/PlacementLineItem__c/fields/StlNetRI__c.field-meta.xml
<CustomField>
    <fullName>StlNetRI__c</fullName>
    <formula>NettoRIPrem__c - ClmNetRI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net to RI_Settlement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>