force-app/main/default/objects/PlacementLineItem__c/fields/StlNetToPlacingTPP__c.field-meta.xml
<CustomField>
    <fullName>StlNetToPlacingTPP__c</fullName>
    <formula>NetPlacingTPP__c - ClmNetToPlacingTPP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net to Placing TPP_Settlement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>