force-app/main/default/objects/PlacementLineItem__c/fields/StlNetToPlacingTPPLK__c.field-meta.xml
<CustomField>
    <fullName>StlNetToPlacingTPPLK__c</fullName>
    <formula>LKNetPlacingTPP__c - ClmNetToPlacingTPPLK__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net to Placing TPP (LK)_Settlement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>