force-app/main/default/objects/PlacementLineItem__c/fields/Subjectivity__c.field-meta.xml
<CustomField>
    <fullName>Subjectivity__c</fullName>
    <label>Subjectivity</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>