force-app/main/default/objects/PlacementLineItem__c/fields/ToLKAdminFee__c.field-meta.xml
<CustomField>
    <fullName>ToLKAdminFee__c</fullName>
    <label>Admin Fee (to LK+)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>