force-app/main/default/objects/PlacementLineItem__c/fields/ToProducingAdminFee__c.field-meta.xml
<CustomField>
    <fullName>ToProducingAdminFee__c</fullName>
    <label>Admin Fee (to Producing -)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>