force-app/main/default/objects/PlacementLineItem__c/fields/TotalBrkgPct__c.field-meta.xml
<CustomField>
    <fullName>TotalBrkgPct__c</fullName>
    <label>Total Brkg(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>