force-app/main/default/objects/PlacementLineItem__c/fields/TPB__c.field-meta.xml
<CustomField>
    <fullName>TPB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TPB</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Placement Line Items (TPB)</relationshipLabel>
    <relationshipName>PlacementLineItems_TPB</relationshipName>
    <type>Lookup</type>
</CustomField>