force-app/main/default/objects/PlacementLineItem__c/fields/TPBPctofTotalBrkg__c.field-meta.xml
<CustomField>
    <fullName>TPBPctofTotalBrkg__c</fullName>
    <label>TPB(%) of Total Brkg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>