force-app/main/default/objects/PlacementLineItem__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New(Non-recurring)</fullName>
            </value>
            <value>
                <fullName>New(Recurring)</fullName>
            </value>
            <value>
                <fullName>Renew</fullName>
            </value>
            <value>
                <fullName>END</fullName>
            </value>
            <value>
                <fullName>Declaration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>