force-app/main/default/objects/PlacementLineItem__c/fields/TSILOL__c.field-meta.xml
<CustomField>
    <fullName>TSILOL__c</fullName>
    <label>TSI/LOL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>