force-app/main/default/objects/PlacementLineItem__c/fields/VariousApprovalMgmt__c.field-meta.xml
<CustomField>
    <fullName>VariousApprovalMgmt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>for Approval</description>
    <label>Various Approval Mgmt</label>
    <referenceTo>COM_VariousApprovalMgmt__c</referenceTo>
    <relationshipLabel>Placement Line Items</relationshipLabel>
    <relationshipName>PlacementLineItems_Approval</relationshipName>
    <type>Lookup</type>
</CustomField>