force-app/main/default/objects/PlacementLineItem__c/fields/WritingCarrierAccount__c.field-meta.xml
<CustomField>
    <fullName>WritingCarrierAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cedant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Placement Line Items (Insurer)</relationshipLabel>
    <relationshipName>PlacementLineItems_Insurer</relationshipName>
    <type>Lookup</type>
</CustomField>