force-app/main/default/objects/PlacementLineItem__c/fields/WrittenPct__c.field-meta.xml
<CustomField>
    <fullName>WrittenPct__c</fullName>
    <label>Written(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>